# polarvm

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config-ix.cmake  config-ix.cmake
cmake/modules/: AddPolar.cmake  AddPolarDefinitions.cmake  AddPolarUnittests.cmake  CheckCompilerVersion.cmake  DetermineGCCCompatible.cmake  FindICU.cmake  GetHostTriple.cmake  HandlePolarOptions.cmake  HandlePolarStdlib.cmake  LinkerProb.cmake  PolarCheckCXXNativeRegex.cmake  PolarComponents.cmake  PolarDawin.cmake  PolarInstallSymlink.cmake  PolarList.cmake  PolarManpage.cmake  PolarOptionSetup.cmake  PolarPHPConfig.cmake  PolarProcessQsScripts.cmake  PolarProcessSources.cmake  PolarSetIfArchBitness.cmake  PolarUtils.cmake
include/: CMakeLists.txt
include/polar/basic/adt/: AllocatorList.h  ApFloat.h  ApInt.h  ApSInt.h  ArrayRef.h  BitVector.h  BitmaskEnum.h  BreadthFirstIterator.h  CachedHashString.h  DagDeltaAlgorithm.h  DeltaAlgorithm.h  DenseMap.h  DenseMapInfo.h  DenseSet.h  DepthFirstIterator.h  EditDistance.h  EpochTracker.h  EquivalenceClasses.h  FoldingSet.h  GraphTraits.h  Hashing.h  ImmutableList.h  ImmutableMap.h  ImmutableSet.h  IndexedMap.h  IntEqClasses.h  IntervalMap.h  IntrusiveList.h  IntrusiveListBase.h  IntrusiveListIterator.h  IntrusiveListNode.h  IntrusiveListNodeBase.h  IntrusiveListNodeOptions.h  IntrusiveRefCountPtr.h  Iterator.h  IteratorRange.h  MapVector.h  None.h  PackedVector.h  PointerEmbeddedInt.h  (+32 more)
include/polar/global/: AbiBreaking.h.cmake  CompilerDetection.h  Config.h.cmake  DataTypes.h.cmake  Global.h  ManagedStatic.h  PolarConfig.h.cmake  ProcessorDetection.h  SystemDetection.h
include/polar/global/platform/: Unix.h
include/polar/syntax/: Token.h.qs
include/polar/utils/: AArch64TargetParser.def  AMDGPUKernelDescriptor.h  AMDGPUMetadata.h  ARMAttributeParser.h  ARMBuildAttributes.h  ARMEHABI.h  ARMTargetParser.def  ARMWinEH.h  AlignOf.h  Allocator.h  ArrayRecycler.h  BinaryByteStream.h  BinaryItemStream.h  BinaryStream.h  BinaryStreamArray.h  BinaryStreamError.h  BinaryStreamReader.h  BinaryStreamRef.h  BinaryStreamWriter.h  BlockFrequency.h  BranchProbability.h  CachePruning.h  Capacity.h  Casting.h  Chrono.h  CircularRawOutStream.h  CommandLine.h  Compression.h  ConvertUtf.h  CrashRecoveryContext.h  DataExtractor.h  Debug.h  DebugCounter.h  DiskHashTable.h  DjbHash.h  DotGraphTraits.h  DynamicLibrary.h  Endian.h  EndianStream.h  ErrorCode.h  (+78 more)
include/polar/utils/yaml/: Parser.h  Traits.h  YamlParser.h  YamlTraits.h
src/: CMakeLists.txt
src/basic/: CMakeLists.txt
src/basic/adt/: ApFloat.cpp  ApInt.cpp  ApSInt.cpp  DAGDeltaAlgorithm.cpp  FoldingSet.cpp  Hashing.cpp  IntEqClasses.cpp  SmallPtrSet.cpp  SmallVector.cpp  Statistic.cpp  StringMap.cpp  Triple.cpp  Twine.cpp
src/global/: CMakeLists.txt  ManagedStatic.cpp
src/utils/: ARMAttributeParser.cpp  ARMBuildAttrs.cpp  ARMWinEH.cpp  Allocator.cpp  ApInt.cpp  BinaryStreamError.cpp  BinaryStreamReader.cpp  BinaryStreamRef.cpp  BinaryStreamWriter.cpp  BlockFrequency.cpp  BranchProbability.cpp  CMakeLists.txt  CachePruning.cpp  Chrono.cpp  CircleRawOutStream.cpp  CommandLine.cpp  Compression.cpp  ConvertUtf.cpp  ConvertUtfWrapper.cpp  CrashRecoveryContext.cpp  DataExtractor.cpp  Debug.cpp  DebugCounter.cpp  DjbHash.cpp  DynamicLibrary.cpp  Error.cpp  ErrorHandling.cpp  ErrorNumber.cpp  ErrorType.cpp  FastHash.cpp  FileOutputBuffer.cpp  FileUtils.cpp  FoldingSet.cpp  FormatVariadic.cpp  FormattedStream.cpp  GlobPattern.cpp  GraphWriter.cpp  Host.cpp  IntervalMap.cpp  JamCrc.cpp  (+42 more)
src/utils/_platform/: DynamicLibraryUnix.cpp  HostUnix.cpp  MemoryUnix.cpp  PathUnix.cpp  ProcessUnix.cpp  ProgramUnix.cpp  SignalsUnix.cpp  WatchDogUnix.cpp
src/utils/yaml/: YamlParser.cpp  YamlTraits.cpp
tools/: CMakeLists.txt
tools/QsParser/: CMakeLists.txt  main.cpp
tools/QsParser/lib/: CMakeLists.txt  Engine.cpp  Engine.h  Helper.h
tools/QsParser/syntax/: CMakeLists.txt  GlobalDefs.cpp  GlobalDefs.h  Node.h
tools/QsParser/tpl/: App.tpl  Class.tpl  Method.tpl
unittests/: CMakeLists.txt  TestEntry.cpp
unittests/basic/adt/: ApFloatTest.cpp  ApIntTest.cpp  ApSIntTest.cpp  ArrayRefTest.cpp  BitMaskEnumTest.cpp  BitVectorTest.cpp  BreadthFirstIteratorTest.cpp  BumpPtrListTest.cpp  CMakeLists.txt  DenseMapTest.cpp  DenseSetTest.cpp  EquivalenceClassesTest.cpp  FoldingSetTest.cpp  FunctionRefTest.cpp  HashingTest.cpp  ImmutableMapTest.cpp  ImmutableSetTest.cpp  IntEqClassesTest.cpp  IntervalMapTest.cpp  IntrusiveListBaseTest.cpp  IntrusiveListIteratorTest.cpp  IntrusiveListNodeBaseTest.cpp  IntrusiveListNodeTest.cpp  IntrusiveListSentienelTest.cpp  IntrusiveListTest.cpp  IntrusiveRefCntPtrTest.cpp  IteratorTest.cpp  MapVectorTest.cpp  MappedIteratorTest.cpp  PackedVectorTest.cpp  PointerEmbeddedIntTest.cpp  PointerIntPairTest.cpp  PointerSumTypeTest.cpp  PointerUnionTest.cpp  PriorityWorklistTest.cpp  RangeAdapterTest.cpp  SccIteratorTest.cpp  ScopeExitTest.cpp  SequenceTest.cpp  SetVectorTest.cpp  (+16 more)
unittests/support/: CMakeLists.txt  Error.cpp  Error.h  SupportHelper.h
unittests/tools/QsParser/: CMakeLists.txt  EngineTest.cpp
unittests/tools/QsParser/data/: TypeDefs.qs
unittests/utils/: ARMAttributeParserTest.cpp  AlignOfTest.cpp  AllocatorTest.cpp  ArrayRecyclerTest.cpp  BinaryStreamTest.cpp  BranchProbabilityTest.cpp  CMakeLists.txt  CachePruningTest.cpp  CastingTest.cpp  ChronoTest.cpp  CommandLineTest.cpp  CompressionTest.cpp  ConvertUtfTest.cpp  CrashRecoveryTest.cpp  DataExtractorTest.cpp  DebugTest.cpp  EndianStreamTest.cpp  EndianTest.cpp  ErrorNumberTest.cpp  ErrorTest.cpp  FastHashTest.cpp  FileOutputBufferTest.cpp  FormatVariadicTest.cpp  FormattedRawOutStreamTest.cpp  GlobPatternTest.cpp  HostTest.cpp  Leb128Test.cpp  LineIteratorTest.cpp  LockFileManagerTest.cpp  ManagedStaticTest.cpp  MathExtrasTest.cpp  Md5Test.cpp  MemoryBufferTest.cpp  MemoryTest.cpp  NativeFormatTest.cpp  OptionalErrorTest.cpp  ParallelTest.cpp  PathTest.cpp  ProcessTest.cpp  ProgramTest.cpp  (+19 more)
