add_subdirectory(ast)
add_subdirectory(utils)
add_subdirectory(basic)
add_subdirectory(driver)
add_subdirectory(gc)
add_subdirectory(global)
add_subdirectory(hook)
add_subdirectory(ide)
add_subdirectory(irgen)
add_subdirectory(lexer)
add_subdirectory(mmgr)
add_subdirectory(module)
add_subdirectory(parse)
add_subdirectory(reflection)
add_subdirectory(runtime)
add_subdirectory(sema)
add_subdirectory(syntax)
add_subdirectory(vm)
